zoom-fix-arabic-alignment-fix

--- a/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/deskresolution.less
+++ b/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/deskresolution.less
@@ -860,6 +860,16 @@
         .page-new-apply-review #requestSubmittedComment  .ratingModule{
             margin-top: 17px;
         }
+
+        .page-license-renew .renew-license-btns{
+            width: 265px !important;
+           
+        }
+
+        .page-realestate-create .formInputBox-append.iconClass.iconClass-currency{
+            padding-top: 23px;
+        }
+        
        
 
 
@@ -3002,6 +3012,14 @@
             margin-top: 17px;
         }
 
+        .page-license-renew .renew-license-btns{
+            width: 265px !important;
+           
+        }
+        .page-realestate-create .formInputBox-append.iconClass.iconClass-currency{
+            padding-top: 23px;
+           
+        }
     
                 /********/
         
@@ -5256,6 +5274,15 @@
         margin-top: 17px;
     }
 
+    .page-license-renew .renew-license-btns{
+        width: 265px !important;
+       
+    }
+    .page-realestate-create .formInputBox-append.iconClass.iconClass-currency{
+        padding-top: 23px;
+       
+    }
+
 
             /********/
 
@@ -6949,3 +6976,12 @@
      
       left: 5px !important;
   }
+
+  [dir="rtl"] .page-new-apply-contactperson #delegateDetails .col-md-6.pl-0{
+    padding-left: 15px !important;
+    padding-right: 0;
+  }
+
+.page-sagia-createGovtServices .btn.btn_outline:hover:not([disabled]){
+    color: #00a6be !important;
+}
